--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-paper": "^3.1.1",
     "react-native-reanimated": "^1.3.0",
     "react-native-screens": "^2.0.0-alpha.5",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-drawer": "^2.3.1",
     "react-navigation-header-buttons": "^3.0.3",
+    "react-navigation-material-bottom-tabs": "^2.1.5",
     "react-navigation-stack": "^1.10.2",
     "react-navigation-tabs": "^2.5.6"
   },
